Bug List Resolved

--- a/Scientific/Base.lproj/Main.storyboard
+++ b/Scientific/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D1d-n7-pZK" userLabel="Calculation Bar">
                                 <rect key="frame" x="5" y="0.0" width="310" height="68"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="miO-Ov-cMo">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="1" translatesAutoresizingMaskIntoConstraints="NO" id="miO-Ov-cMo">
                                         <rect key="frame" x="8" y="8" width="294" height="52"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="294" id="a6S-6E-wRF"/>
